# dckp-sbpo

./: .gitignore  CMakeLists.txt  Makefile  README.md  dckp_sbpo
results/: results_Greedy_MaxProfit_20260420_164340.csv  results_ILS_20260420_164334.csv  results_VND_20260420_165743.csv  results_VNS_20260420_164333.csv
scripts/: run_experiments.sh
src/: main.cpp
src/algorithms/: algorithm.h  rng.h  runner.cpp  runner.h  stopping_criteria.h
src/constructive/: greedy_max_profit.cpp  greedy_max_profit.h
src/local_search/: ils.cpp  ils.h  vnd.cpp  vnd.h  vns.cpp  vns.h
src/utils/: instance_reader.cpp  instance_reader.h  solution.cpp  solution.h  validator.cpp  validator.h
tests/: CMakeLists.txt  test_greedy_max_profit.cpp  test_ils.cpp  test_index_normalization.cpp  test_parser_ampl.cpp  test_parser_compact.cpp  test_solution_comparison.cpp  test_support.h  test_validator_invalid.cpp  test_vnd.cpp  test_vns.cpp
